cabal-version:       2.2

name:                bejnarkli
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


common shared-properties
  build-depends:
    base,
    base64-bytestring,
    bytestring,
    conduit,
    conduit-extra,
    containers,
    cryptonite,
    cryptonite-conduit,
    directory,
    filepath,
    memory,
    network,
    network-simple,
    network-uri,
    QuickCheck,
    quickcheck-instances,
    random,
    resourcet,
    streaming-commons,
    temporary,
    utf8-string
  default-language:    Haskell2010
  ghc-options:
    -Wcompat
    -Werror
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.8)
    ghc-options: -Wno-missing-deriving-strategies

library
  import: shared-properties
  exposed-modules:     Bejnarkli
  other-modules:
    BlobStore
    Queue
    TCPClient

executable bejnarkli
  import: shared-properties
  main-is:             Main.hs
  other-modules:
    Bejnarkli,
    BlobStore,
    Queue,
    ReplicatingBlobStore,
    TCPClient,
    TCPServer
  build-depends:       optparse-applicative

test-suite bejnarkli-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli,
    BlobStore,
    Queue,
    TCPClient
  main-is:             BejnarkliTest.hs

test-suite blobstore-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli
    BlobStore
    Queue
    ReplicatingBlobStore
    TCPClient
  main-is:             BlobStoreTest.hs

test-suite queue-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:       Queue
  main-is:             QueueTest.hs

test-suite replicatedblobstore-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli
    BlobStore
    Queue
    ReplicatingBlobStore
    TCPClient
  main-is:             ReplicatingBlobStoreTest.hs
