cabal-version:       2.2

name:                bejnarkli
version:             0.1.1.1
synopsis:            Durable network storage
description:
  Accept data over TCP.  Store it.  Forward it to other instances.
  Authenticate with a shared secret.  Network interface is write-only.
license-file:        LICENSE
maintainer:          Scott Worley <scottworley@scottworley.com>
build-type:          Simple
extra-source-files:  CHANGELOG.md


common shared-properties
  build-depends:
    async,
    base,
    base64-bytestring,
    bytestring,
    conduit,
    conduit-extra,
    containers,
    cryptonite,
    cryptonite-conduit,
    directory,
    filepath,
    memory,
    network,
    network-simple,
    network-uri,
    parallel-io,
    QuickCheck,
    quickcheck-instances,
    random,
    resourcet,
    sqlite-simple,
    streaming-commons,
    temporary,
    utf8-string
  default-language:    Haskell2010
  if impl(ghc >= 8.8)
    ghc-options: -Wno-missing-deriving-strategies

library
  import: shared-properties
  exposed-modules:     Bejnarkli
  other-modules:
    BlobStore
    PersistentOnce
    Queue
    Retransmit
    Retry
    TCPClient

executable bejnarkli
  import: shared-properties
  main-is:             Main.hs
  other-modules:
    Bejnarkli,
    BlobStore,
    PersistentOnce,
    Queue,
    Retransmit,
    Retry,
    ReplicatingBlobStore,
    TCPClient,
    TCPServer
  build-depends:       optparse-applicative

executable bejnarkli-send
  import: shared-properties
  main-is:             MainSend.hs
  other-modules:
    Async,
    Bejnarkli,
    BlobStore,
    PersistentOnce,
    Queue,
    Retry,
    TCPClient
  build-depends:       optparse-applicative

test-suite bejnarkli-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli,
    BlobStore,
    PersistentOnce,
    Queue,
    Retry,
    TCPClient
  main-is:             BejnarkliTest.hs

test-suite blobstore-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli
    BlobStore
    PersistentOnce
    Queue
    Retry
    ReplicatingBlobStore
    TCPClient
  main-is:             BlobStoreTest.hs

test-suite persistent-once-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:       PersistentOnce Queue
  main-is:             PersistentOnceTest.hs

test-suite queue-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:       Queue
  main-is:             QueueTest.hs

test-suite retry-queue-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:       Retry
  main-is:             RetryTest.hs

test-suite replicatedblobstore-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  other-modules:
    Bejnarkli
    BlobStore
    PersistentOnce
    Queue
    Retry
    ReplicatingBlobStore
    TCPClient
  main-is:             ReplicatingBlobStoreTest.hs
