cabal-version:       2.2

name:                bejnarkli
version:             0.2.0.0
synopsis:            Durable network storage
description:
  Accept data over TCP.  Store it.  Forward it to other instances.
  Authenticate with a shared secret.  Network interface is write-only.
license-file:        LICENSE
maintainer:          Scott Worley <scottworley@scottworley.com>
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: git@github.com:chkno/bejnarkli.git

common shared-properties
  build-depends:
      base
    , QuickCheck
    , bytestring
    , conduit
    , filepath
    , parallel-io
    , quickcheck-instances
    , temporary
    , utf8-string
  default-language:    Haskell2010
  if impl(ghc >= 8.8)
    ghc-options: -Wall -Wno-missing-deriving-strategies

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Async
    Bejnarkli
    BlobStore
    PersistentOnce
    Queue
    ReplicatingBlobStore
    Retransmit
    Retry
    TCPClient
    TCPServer
  build-depends:
      async
    , base
    , base64-bytestring
    , bytestring
    , conduit-extra
    , containers
    , cryptonite
    , cryptonite-conduit
    , directory
    , memory
    , network
    , network-simple
    , network-uri
    , random
    , resourcet
    , sqlite-simple
    , streaming-commons

executable bejnarkli
  import: shared-properties
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      bejnarkli
    , optparse-applicative

executable bejnarkli-send
  import: shared-properties
  hs-source-dirs: app
  main-is: MainSend.hs
  build-depends:
      bejnarkli
    , optparse-applicative

test-suite bejnarkli-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: BejnarkliTest.hs
  build-depends: bejnarkli

test-suite blobstore-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: BlobStoreTest.hs
  build-depends: bejnarkli

test-suite persistent-once-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: PersistentOnceTest.hs
  build-depends: bejnarkli

test-suite queue-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: QueueTest.hs
  build-depends: bejnarkli

test-suite retry-queue-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: RetryTest.hs
  build-depends: bejnarkli

test-suite replicatedblobstore-test
  import: shared-properties
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: ReplicatingBlobStoreTest.hs
  build-depends: bejnarkli
